kubernetes/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    # Traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # ExternalDNS
    external-dns.alpha.kubernetes.io/hostname: argocd.homelab.jonasg.be
    # cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    # IMPORTANT: Argo CD expects HTTPS
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.homelab.jonasg.be
    secretName: argocd-tls
  rules:
  - host: argocd.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
